# AudioMorphix

./: .gitignore  README.md  app.py  inference.py  pyproject.toml  requirements.txt
configs/audio_processors/: audio_processor_16k.yaml
configs/runners/: evaluate_add.yaml  evaluate_remove.yaml  evaluate_replace.yaml  evaluate_style_transfer.yaml  generate_runner.yaml  mix_runner.yaml  move_and_resize_runner.yaml  paste_runner.yaml  remove_runner.yaml  style_transfer_runner.yaml
configs/tasks/: generate.yaml  mix.yaml  move_and_resize.yaml  paste.yaml  remove.yaml  replace.yaml  style_transfer.yaml
experiments/: eval.py  eval_ddim_inv.py  eval_ddim_inv_onMedleyMDPrompts.py  eval_onMedleyMDPrompt.py
src/: audio_morphix.py
src/data/: __init__.py  dataset.py  processors.py
src/demo/: examples.py  gradio_utils.py  utils.py
src/model/: pipeline.py  sampler.py
src/module/tango/: models.py  tango.py  test_ddim.py
src/module/tango/tools/: torch_tools.py
src/module/unet/: attention_2d.py  attention_processor.py  estimator.py  resnet_2d.py  unet_2d_blocks.py  unet_2d_condition.py
src/utils/: alignment.py  audio_processing.py  config.py  factory.py  inversion.py  plot.py  utils.py  wav_converter.sh
